missed live-kdeos switch in kdeos-hwdetect.conf

--- a/etc/kdeos-hwdetect.conf
+++ b/etc/kdeos-hwdetect.conf
@@ -1,11 +1,11 @@
 # LOCATION OF ANY EXTRA PACKAGES
-LIVE_PKG_PATH="/opt/live/pkgs" 
+LIVE_PKG_PATH="/opt/kdeos/pkgs" 
 
 # LOCATION OF THE DRIVER PACKAGES
-HW_DRIVER_PATH="/opt/live/pkgs"
+HW_DRIVER_PATH="/opt/kdeos/pkgs"
 
 # LOCATION OF THE HARDWARE DATABASE
-HW_DB_PATH="/opt/live/hwdb"
+HW_DB_PATH="/opt/kdeos/hwdb"
 
 # NVIDIA HW DATABASE FILE NAME
 NV_DB="hw_nvidia_hwdb"
